# image_classification

./: .gitignore  README.md
classfication/: batch_inference.py  imageClassification.md  inference.py  main.py
classfication/config/: default.yaml
classfication/data/: data.py  datasets.py  transforms.py  transforms_factory.py
classfication/models/: MaxVit.py  conv_next2.py  lng_transformer.py  lng_transformer_allimg.py  max_vit.py  model.py  swin_transformer.py
classfication/optimizer/: optim_factory.py  scheduler_factory.py
classfication/tools/: engine.py  utils.py
datasets/: data_split.py
datasets/catdog/: class_name.yaml
export/ncnn_examples/cpp/: CMakeLists.txt  cpp_ncnn_inference.cpp
export/ncnn_examples/java/: CMakeLists.txt  java_os_inference.h  java_os_inference.java  ncnn_inference.cpp
export/ncnn_examples/ncnn-20240410-ubuntu-2204/: mobilenet_v3_s_ubuntu_2204.param
export/onnx_examples/: model_to_onnx.py  python_onnx_test.py
export/onnx_examples/cpp/: CMakeLists.txt  cpp_onnx_inference.cpp
export/onnx_examples/java/: CMakeLists.txt  java_onnx_inference.h  java_onnx_inference.java  onnx_inference.cpp
export/onnx_examples/javascript_web/: app.js  readme.txt  web.html
export/onnx_examples/javascript_web/onnxruntime-web/: package.json
export/onnx_examples/javascript_web/onnxruntime-web/docs/: webgl-operators.md  webgpu-operators.md
export/onnx_examples/javascript_web/onnxruntime-web/lib/onnxjs/: attribute-with-cache-key.js  attribute-with-cache-key.js.map  attribute.js  attribute.js.map  execution-plan.js  execution-plan.js.map  graph.js  graph.js.map  instrument.js  instrument.js.map  model.js  model.js.map  session.js  session.js.map  tensor.js  tensor.js.map  util.js  util.js.map
export/onnx_examples/javascript_web/onnxruntime-web/lib/onnxjs/backends/: backend-webgl.js  backend-webgl.js.map
export/onnx_examples/javascript_web/onnxruntime-web/lib/onnxjs/backends/webgl/: glsl-coordinate-lib.js  glsl-coordinate-lib.js.map  glsl-definitions.js  glsl-definitions.js.map  inference-handler.js  inference-handler.js.map  texture-data-encoder.js  texture-data-encoder.js.map  texture-layout-strategy.js  texture-layout-strategy.js.map  texture-manager.js  texture-manager.js.map  types.js  types.js.map  webgl-context-factory.js  webgl-context-factory.js.map  webgl-context.js  webgl-context.js.map
export/onnx_examples/javascript_web/onnxruntime-web/lib/onnxjs/backends/webgl/ops/: concat-packed.js  concat-packed.js.map  concat.js  concat.js.map  gather.js  gather.js.map  im2col.js  im2col.js.map  image-scaler.js  image-scaler.js.map  matmul-pack.js  matmul-pack.js.map  matmul.js  matmul.js.map  pack.js  reduce.js  reduce.js.map  shape.js  shape.js.map  slice.js  slice.js.map  split.js  split.js.map  sum.js  sum.js.map  tile.js  tile.js.map  transpose.js  transpose.js.map
export/onnx_examples/javascript_web/onnxruntime-web/lib/onnxjs/ort-schema/flatbuffers/: ort-generated.js  ort-generated.js.map
export/onnx_examples/onnxruntime-linux-x64-1.19.0/: GIT_COMMIT_ID
export/onnx_examples/python/: python_onnx_inference.py  python_onnx_test.py
